--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,9 @@ bower_components
 .env.development.local
 .env.test.local
 .env.production.local
+.env*
+.env.s3
+.env.s3.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
