--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.616.0",
     "@tsoa/runtime": "^6.3.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "esbuild": "^0.21.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "swagger-ui-express": "^5.0.1",
     "tsoa": "^6.3.1",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.9",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
