--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,8 +32,12 @@ jobs:
         run: yarn build
 
       - name: Run tests
+
         env:
-          MONGODB_URL: ${{ secrets.MONGODB_URL }}
+            AWS_REGION: ${{ secrets.AWS_REGION }}
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}    
+            MONGODB_URL: ${{ secrets.MONGODB_URL }}
         run: yarn test
 
       - name: Archive build artifacts
