--- a/.gitignore
+++ b/.gitignore
@@ -74,9 +74,10 @@ bower_components
 .env.development.local
 .env.test.local
 .env.production.local
-.env*
+.env.*
 .env.s3
 .env.s3.local
+.env.development
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
