--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: "."
+        working-directory: "./"
 
     steps:
       - name: Checkout code
@@ -29,6 +29,7 @@ jobs:
         run: yarn install
 
       - name: Run build
+        working-directory: "./"
         run: yarn build
 
       - name: Run tests
