--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,3 @@
-
 name: Node.js CI
 
 on:
@@ -35,11 +34,9 @@ jobs:
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRETKEY}}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           MONGODB_URL: ${{ secrets.MONGODB_URL }}
         run: yarn test
-
-        
 
       - name: Archive build artifacts
         uses: actions/upload-artifact@v4
@@ -54,17 +51,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
-  
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-  
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
           path: ./build
-  
+
       - name: Prepare Deployment Directories
         uses: appleboy/ssh-action@master
         with:
@@ -75,7 +72,7 @@ jobs:
           script: |
             mkdir -p /home/ubuntu/UploadsFile/API_Test/build
             mkdir -p /home/ubuntu/UploadsFile/API_Test/build/configs
-  
+
       - name: Copy files to Server
         uses: appleboy/scp-action@master
         with:
@@ -86,7 +83,7 @@ jobs:
           source: "./build/*"
           target: "/home/ubuntu/UploadsFile/API_Test/build"
           strip_components: 1
-  
+
       - name: Create .env File
         uses: appleboy/ssh-action@master
         with:
@@ -98,7 +95,7 @@ jobs:
             echo "NODE_ENV=production" > /home/ubuntu/UploadsFile/API_Test/build/.env
             echo "PORT=your_port_number" >> /home/ubuntu/Project/UploadsFile/build/configs.env.production
             echo "DATABASE_URL=your_database_url" >> /home/ubuntu/UploadsFile/API_Test/build/configs.env.production
-  
+
       - name: Install Dependencies and Restart Application
         uses: appleboy/ssh-action@master
         with:
@@ -124,5 +121,3 @@ jobs:
             else
               echo "Application is not running. Starting..."
               pm2 start build/server.js --name $SERVICE_NAME
-            fi
-            
