--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run tests
         env:
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_REGOIN: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRETKEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           MONGODB_URL: ${{ secrets.MONGODB_URL }}
