--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -112,5 +112,9 @@ jobs:
     
                 # Debug: List files after installation
                 ls -la
+    
+                # Check if the PM2 process is running
+                  SERVICE_NAME="s3"
+               
                   echo "Application is not running. Starting..."
                   pm2 start build/server.js --name $SERVICE_NAME
