--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -114,10 +114,10 @@ jobs:
                 ls -la
     
                 # Check if the PM2 process is running
-                SERVICE_NAME="s3"
-                if pm2 show $SERVICE_NAME > /dev/null; then
+                SERVICE="s3"
+                if pm2 show $SERVICE > /dev/null; then
                   echo "Application is running. Restarting..."
                   pm2 restart $SERVICE_NAME
                 else
                   echo "Application is not running. Starting..."
-                  pm2 start build/server.js --name $SERVICE_NAME
+                  pm2 start build/server.js --name $SERVICE
