--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -115,9 +115,9 @@ jobs:
     
                 # Check if the PM2 process is running
                 SERVICE="s3"
-                if pm2 show $SERVICE > /dev/null; then
-                  echo "Application is running. Restarting..."
-                  pm2 restart $SERVICE_NAME
-                else
-                  echo "Application is not running. Starting..."
-                  pm2 start build/server.js --name $SERVICE
+                  if pm2 show $SERVICE > /dev/null; then
+                    echo "Application is running. Restarting..."
+                    pm2 restart $SERVICE
+                  else
+                    echo "Application is not running. Starting..."
+                    pm2 start build/server.js --name $SERVICE
