--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -114,10 +114,15 @@ jobs:
                 ls -la
     
                 # Check if the PM2 process is running
-                SERVICE="s3"
-                  if pm2 show $SERVICE > /dev/null; then
-                    echo "Application is running. Restarting..."
-                    pm2 restart $SERVICE
-                  else
-                    echo "Application is not running. Starting..."
-                    pm2 start build/server.js --name $SERVICE
+                  set -e
+
+                  SERVICE="s3"
+                    # Check if PM2 is online
+                    pm2 show $SERVICE > /dev/null 2>&1
+                    if [ $? -eq 0 ]; then
+                      echo "Application is running. Restarting..."
+                      pm2 restart $SERVICE
+                    else
+                      echo "Application is not running. Starting..."
+                      pm2 start build/server.js --name $SERVICE
+                    fi
